Thu Jun 10 17:27:35 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Utils.cpp:

          Fixed some memory leaks as well!!

Thu Jun 10 17:26:25 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:

          Fixed memory leaks.

Thu Jun 10 14:06:03 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_T.cpp:
        * DnC/ciao/Servant_Impl_T.cpp:

          Modified code that passed _var.out() to ACE_NEW_RETURN,
          since sometimes on Windows platforms, for whatever
          reason Var_Base::out() will be called after the
          allocation, effectively cancelling it out. It is
          alwas safe to declare a pointer, pass it to ACE_NEW_*
          and then assign it to a _var, so that is what is
          done now in get_all_facets() and get_all_consumers().

Thu Jun 10 10:17:00 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/Container_Base.h:
	  Followed up a Jeff's Change in the old ciao.

	* DnC/ExecutionManager/ExecutionManager_Impl.cpp:
	* DnC/ExecutionManager/ExecutionManager_Impl.h:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
	* DnC/RepositoryManager/Repository_Manager.cpp:
	* DnC/NodeManager/Node_Daemon.cpp:
	* DnC/ciao/NodeApplication_Impl.cpp:
	* DnC/DomainApplicationMananger/NodeApplicationManager_Impl.cpp:

	  Many adjustments, bug fixing, added missing functionalities.
	  This is not a working version now.

Wed Jun  9 11:17:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager_Impl.cpp

          Fixed a bug which is caused by initialzing ulong sequence type.

Tue Jun  8 20:53:12 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplicationManager/ImplementationInfo.cpp:
	* DnC/NodeApplicationManager/ImplementationInfo.h:
	  Added these files.

	* DnC/NodeApplicationManager/NodeApplicationManager.mpc: