@@ -65,9 +65,12 @@ DOMDocument* create_document (const char *url)
   DOMDocument* doc = parser->parseURI (url);
   auto_ptr<DOMDocument> cleanup_doc (doc);
   ACE_TString root_node_name;
+  char * root_node_name_ch;
 
-  root_node_name = XMLString::transcode
+  root_node_name_ch = XMLString::transcode
     (doc->getDocumentElement ()->getNodeName ());
+  root_node_name = root_node_name_ch;
+  auto_ptr<char> cleanup_char (root_node_name_ch);
 
   return doc;
 }
@@ -96,8 +99,10 @@ process_refs(DOMNode*& node,
         {
           DOMNode* attribute_node = named_node_map->item (j);
           XStr strattrnodename (attribute_node->getNodeName ());
-          ACE_TString aceattrnodevalue = XMLString::transcode
+          char* aceattrnodevalue_ch = XMLString::transcode
             (attribute_node->getNodeValue ());
+          ACE_TString aceattrnodevalue = aceattrnodevalue_ch;
+          auto_ptr<char> cleanup_char (aceattrnodevalue_ch);
           if (strattrnodename == XStr (ACE_TEXT ("xmi:idref")))
             {
               //index = index + 1;
@@ -125,8 +130,10 @@ process_ref(DOMNode*& node,
         {
           DOMNode* attribute_node = named_node_map->item (j);
           XStr strattrnodename (attribute_node->getNodeName ());
-          ACE_TString aceattrnodevalue = XMLString::transcode
+          char* aceattrnodevalue_ch = XMLString::transcode
             (attribute_node->getNodeValue ());
+          ACE_TString aceattrnodevalue = aceattrnodevalue_ch;
+          auto_ptr<char> cleanup_char (aceattrnodevalue_ch);
           if (strattrnodename == XStr (ACE_TEXT ("xmi:idref")))
             {
               //index = index + 1;
