@@ -3,6 +3,7 @@
 #include "RS_Handler.h"
 #include "SP_Handler.h"
 #include "tao/Exception.h"
+#include "ace/Auto_Ptr.h"
 #include "Utils.h"
 
 void
@@ -70,8 +71,10 @@ process_RequirementSatisfier (DOMNodeIterator * iter,
                         {
                           DOMNode * attr_node = named_node_map->item (j);
                           XStr attr_node_name = attr_node->getNodeName ();
-                          ACE_TString attr_node_value =
+                          char*  attr_node_value_ch =
                             XMLString::transcode (attr_node->getNodeValue ());
+                          ACE_TString attr_node_value = attr_node_value_ch;
+                          auto_ptr<char> cleanup_char (attr_node_value_ch);
                           if (attr_node_name = XStr (ACE_TEXT ("href")))
                             {
                               XMLURL url (attr_node_value.c_str ());
