@@ -54,8 +54,10 @@ CIAO::Config_Handler::Requirement_Handler::process_Requirement (DOMNodeIterator 
                         {
                           DOMNode * attr_node = named_node_map->item (j);
                           XStr attr_node_name = attr_node->getNodeName ();
-                          ACE_TString attr_node_value =
+                          char*  attr_node_value_ch =
                             XMLString::transcode (attr_node->getNodeValue ());
+                          ACE_TString attr_node_value = attr_node_value_ch;
+                          auto_ptr<char> cleanup_char (attr_node_value_ch);
                           if (attr_node_name = XStr (ACE_TEXT ("href")))
                             {
                               XMLURL url (attr_node_value.c_str ());
