@@ -1,3 +1,13 @@
+Thu Jun 10 17:44:57 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/Process_Element.cpp:
+        * DnC/Config_Handlers/Property_Handler.cpp:
+        * DnC/Config_Handlers/RS_Handler.cpp:
+        * DnC/Config_Handlers/Requirement_Handler.cpp:
+        * DnC/Config_Handlers/SP_Handler.cpp:
+
+          More memory leaks fixes.
+
 Thu Jun 10 17:27:35 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/Utils.cpp:
